--- a/beatz/beatz/beatz.csproj
+++ b/beatz/beatz/beatz.csproj
@@ -243,6 +243,7 @@
     <Content Include="login-register.html" />
     <Content Include="login.aspx" />
     <Content Include="podcasts_content.html" />
+    <Content Include="music_queue.aspx" />
     <Content Include="release_content.html" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
@@ -559,6 +560,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Classes\Admin.cs" />
     <Compile Include="Classes\Connection.cs" />
+    <Compile Include="Classes\Queue.cs" />
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -585,6 +587,13 @@
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="music_queue.aspx.cs">
+      <DependentUpon>music_queue.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="music_queue.aspx.designer.cs">
+      <DependentUpon>music_queue.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
