--- a/beatz/beatz/beatz.csproj
+++ b/beatz/beatz/beatz.csproj
@@ -242,6 +242,7 @@
     <Content Include="index.html" />
     <Content Include="login-register.html" />
     <Content Include="login.aspx" />
+    <Content Include="playlist.aspx" />
     <Content Include="podcasts_content.html" />
     <Content Include="music_queue.aspx" />
     <Content Include="release_content.html" />
@@ -560,6 +561,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Classes\Admin.cs" />
     <Compile Include="Classes\Connection.cs" />
+    <Compile Include="Classes\Playlist.cs" />
     <Compile Include="Classes\Queue.cs" />
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
@@ -586,6 +588,13 @@
       <DependentUpon>login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="playlist.aspx.cs">
+      <DependentUpon>playlist.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="playlist.aspx.designer.cs">
+      <DependentUpon>playlist.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="music_queue.aspx.cs">
       <DependentUpon>music_queue.aspx</DependentUpon>
