--- a/beatz/beatz/beatz.csproj
+++ b/beatz/beatz/beatz.csproj
@@ -251,12 +251,15 @@
     <Content Include="genre.aspx" />
     <Content Include="genre.html" />
     <Content Include="genre_list.aspx" />
+    <Content Include="home.aspx" />
     <Content Include="home.html" />
     <Content Include="index.aspx" />
     <Content Include="index.html" />
     <Content Include="login-register.html" />
     <Content Include="login.aspx" />
+    <Content Include="logout.aspx" />
     <Content Include="playlist.aspx" />
+    <Content Include="playlist_list.aspx" />
     <Content Include="podcasts_content.html" />
     <Content Include="music_queue.aspx" />
     <Content Include="release_content.html" />
@@ -673,6 +676,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="home.aspx.cs">
+      <DependentUpon>home.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="home.aspx.designer.cs">
+      <DependentUpon>home.aspx</DependentUpon>
+    </Compile>
     <Compile Include="index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -687,6 +697,13 @@
     <Compile Include="login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="logout.aspx.cs">
+      <DependentUpon>logout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="logout.aspx.designer.cs">
+      <DependentUpon>logout.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="playlist.aspx.cs">
       <DependentUpon>playlist.aspx</DependentUpon>
@@ -694,6 +711,13 @@
     </Compile>
     <Compile Include="playlist.aspx.designer.cs">
       <DependentUpon>playlist.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="playlist_list.aspx.cs">
+      <DependentUpon>playlist_list.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="playlist_list.aspx.designer.cs">
+      <DependentUpon>playlist_list.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="music_queue.aspx.cs">
